<resources>
    <string name="app_name">Calculator App</string>
    <string name="add_numbers">Add</string>
    <string name="subtract_numbers">Subtract</string>
    <string name="multiply_numbers">Multiply</string>
    <string name="divide_numbers">Divide</string>
    <string name="result">Result</string>
    <string name="enter_first_number">Enter First Number</string>
    <string name="enter_second_number">Enter Second Number</string>
    <string name="clear">Clear</string>
    <string name="operation_spinner_prompt">Select an Operation</string>

    <string-array name="operations">
        <item>@string/add_numbers</item>
        <item>@string/subtract_numbers</item>
        <item>@string/multiply_numbers</item>
        <item>@string/divide_numbers</item>
    </string-array>
</resources>